<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cloud.xuantong</groupId>
    <artifactId>xuantong-config</artifactId>
    <version>1.3.0</version>
    <packaging>pom</packaging>
    <name>Xuantong Config</name>
    <parent>
        <groupId>org.noear</groupId>
        <artifactId>solon-parent</artifactId>
        <version>4.0.0</version>
    </parent>

    <modules>
        <module>xuantong-admin</module>
        <module>xuantong-core</module>
    </modules>

    <properties>
        <easyquery.version>3.1.48</easyquery.version>
        <hikaricp.version>4.0.3</hikaricp.version>
        <mysql.version>8.4.0</mysql.version>
        <protobuf.version>4.28.2</protobuf.version>
        <socketd.version>2.5.20</socketd.version>
        <hutool.version>5.8.32</hutool.version>
        <logback.version>1.5.34</logback.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Solon Core -->
            <dependency>
                <groupId>org.noear</groupId>
                <artifactId>solon-web</artifactId>
                <version>${solon.version}</version>
            </dependency>
            <dependency>
                <groupId>org.noear</groupId>
                <artifactId>socketd</artifactId>
                <version>${socketd.version}</version>
            </dependency>

            <dependency>
                <groupId>org.noear</groupId>
                <artifactId>solon-net</artifactId>
                <version>${solon.version}</version>
            </dependency>
            <dependency>
                <groupId>org.noear</groupId>
                <artifactId>solon-sessionstate-jwt</artifactId>
                <version>${solon.version}</version>
            </dependency>
            <dependency>
                <groupId>org.noear</groupId>
                <artifactId>solon-data</artifactId>
                <version>${solon.version}</version>
            </dependency>
            <dependency>
                <groupId>org.noear</groupId>
                <artifactId>solon-cache-jedis</artifactId>
                <version>${solon.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-core</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <!-- EasyQuery -->
            <dependency>
                <groupId>com.easy-query</groupId>
                <artifactId>sql-solon-plugin</artifactId>
                <version>${easyquery.version}</version>
            </dependency>
            <dependency>
                <groupId>com.easy-query</groupId>
                <artifactId>sql-processor</artifactId>
                <version>${easyquery.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.noear</groupId>
                <artifactId>solon-view-enjoy</artifactId>
                <version>${solon.version}</version>
            </dependency>
            <dependency>
                <groupId>org.noear</groupId>
                <artifactId>solon-logging-logback</artifactId>
                <exclusions>
                    <exclusion>
                        <groupId>ch.qos.logback</groupId>
                        <artifactId>logback-classic</artifactId>
                    </exclusion>
                </exclusions>
                <version>${solon.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <!--HikariCP-->
            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>${hikaricp.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.protobuf</groupId>
                        <artifactId>protobuf-java</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
            <!-- 测试依赖 -->
            <dependency>
                <groupId>org.noear</groupId>
                <artifactId>solon-test</artifactId>
                <version>${solon.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>